src/FinancialForce Accounting/objects/codaGroupingReference__c.object
<CustomObject>
    <description>Internal object that provides new references for various processes within the application.</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Grouping References</relationshipLabel>
        <relationshipName>GroupingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceType__c</fullName>
        <description>The type of reference</description>
        <label>Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Group</fullName>
                </value>
                <value>
                    <fullName>Income Schedule Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grouping Reference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Document Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grouping References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>